# mmfm-analyzer

./: .gitignore  CASE-STUDY.md  METHODOLOGY.md  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
resources/schemas/: assumptions_schema.yaml  capex_schema.yaml  opex_schema.yaml  revenue_schema.yaml
scripts/: ingest_resources.py  rebuild_knowledge_base.py  validate_model.py
src/mmfm/: __init__.py  app.py  cli.py  config.py
src/mmfm/ai/: anomaly_detector.py  backends.py  model_router.py  narrator.py
src/mmfm/demo/: demo_markets.py
src/mmfm/engine/: __init__.py  comparison.py  core_metrics.py  monte_carlo.py  projections.py  scenarios.py  sensitivity.py
src/mmfm/ingestion/: __init__.py  csv_handler.py  docx_reader.py  excel_parser.py  pdf_reader.py  schema_validator.py
src/mmfm/knowledge/: __init__.py  chunker.py  indexer.py  registry.py  retriever.py
src/mmfm/output/: __init__.py  excel_export.py  terminal.py  (+2 more)
tests/: conftest.py
tests/fixtures/: demo_markets.py
tests/test_ai/: test_anomaly_detector.py  test_backends.py  test_model_router.py  test_narrator.py
tests/test_engine/: test_core_metrics.py  test_monte_carlo.py  test_scenarios.py  test_sensitivity.py
tests/test_ingestion/: test_docx_reader.py  test_excel_parser.py  test_lead_time_validation.py  test_pdf_reader.py  test_schema_validator.py
tests/test_integration/: test_end_to_end.py  test_report_generation.py
tests/test_knowledge/: test_chunker.py  test_registry.py
tests/test_validation/: test_bounds_checker.py  test_cross_validator.py  test_provenance.py
(+7 files in other folders)
