[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mmfm-analyzer"
version = "0.1.0"
description = "Municipal Market Financial Model Analyzer — ICLEI Africa / MAP Capstone"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "numpy>=1.26",
    "numpy-financial>=1.0",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "chromadb>=0.5",
    "tiktoken>=0.7",
    "anthropic>=0.40",
    "matplotlib>=3.8",
    "jinja2>=3.1",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "streamlit>=1.35",
    "plotly>=5.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.6",
]

[project.scripts]
mmfm = "mmfm.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/mmfm"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
